[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cbus4py"
version = "1.0.0.dev1"
authors = [
  { name="José Parera", email="j3parera@gmail.com" },
]
description = "Python implementation of MERG CBUS Protocol."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # "Topic :: System :: Hardware :: Controller Area Network (CAN)"
]

[project.urls]
"Homepage" = "https://github.com/j3parera/cbus4py"
"Bug Tracker" = "https://github.com/j3parera/cbus4py/issues"